# speckle

./: README.md  setup.cfg  setup.py
notebooks/: test-alopeke.ipynb  test-dssi.ipynb  test-zorro.ipynb
scripts/: speckle-plot
speckle/: __init__.py  speckle.py
