[metadata]
name = speckle
version = 0.2.1
summary = Plotting script for astronomical speckle imaging data
author = John Livingston
author_email = livingston.astro@gmail.com
license = WTFPL v3
keywords = astronomy, speckle, imaging
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python

[options]
packages = speckle
install_requires =
    numpy
    pandas
    matplotlib
    astropy

[options.entry_points]
console_scripts =
    speckle-plot = speckle.speckle:cli
